--- a/postres.html
+++ b/postres.html
@@ -84,6 +84,26 @@
             </ul>
         </div>
 
+        <section>
+            <article class="product-1">
+                <h2>Helado</h2>
+                <p> Los argentinos son conocidos por su amor por el helado. Los helados argentinos son cremosos y vienen
+                    en una amplia variedad de sabores. Algunas heladerías son famosas por ofrecer sabores únicos y
+                    deliciosos</p>
+            </article>
+        </section>
+
+        <div class="item-dul2"><img class="img-dulce" src="imagenes/helado.jpg" width="900px" height="400px"
+                alt="helado.img"></div>
+
+        <div>
+            <ul>
+                <li>Leche</li>
+                <li>Crema de leche</li>
+                <li>Azúcar</li>
+                <li>Sabores variados (frutas, chocolates, etc.)</li>
+            </ul>
+        </div>
 
         <div class="borde2"></div>
         <nav>
